@@ -14,10 +14,14 @@ from tipfy import local, Map, Rule, Tipfy
 
 fake_local = {}
 
+
+from google.appengine.api.xmpp import Message as ApiMessage
+
 def get_url_map():
     # Fake get_rules() for testing.
     rules = [
         Rule('/', endpoint='xmpp-test', handler='files.app.xmpp_handlers.XmppHandler'),
+        Rule('/test2', endpoint='xmpp-test', handler='files.app.xmpp_handlers.XmppHandler2'),
     ]
 
     return Map(rules)
@@ -32,10 +36,6 @@ def get_app():
     })
 
 
-class InvalidMessageError(Exception):
-    pass
-
-
 def send_message(jids, body, from_jid=None, message_type='chat',
                  raw_xml=False):
     fake_local['message'] = {
@@ -43,82 +43,44 @@ def send_message(jids, body, from_jid=None, message_type='chat',
     }
 
 
-class Message(object):
-  """Encapsulates an XMPP message received by the application."""
+class InvalidMessageError(Exception):
+    pass
 
-  def __init__(self, vars):
-    """Constructs a new XMPP Message from an HTTP request.
 
-    Args:
-      vars: A dict-like object to extract message arguments from.
-    """
-    try:
-      self.__sender = vars["from"]
-      self.__to = vars["to"]
-      self.__body = vars["body"]
-    except KeyError, e:
-      raise InvalidMessageError(e[0])
-    self.__command = None
-    self.__arg = None
+class Message(ApiMessage):
+    """Encapsulates an XMPP message received by the application."""
+    def __init__(self, vars):
+        """Constructs a new XMPP Message from an HTTP request.
 
-    #import sys
-    #sys.exit(self.command + ' ---> ' + self.arg)
+        Args:
+          vars: A dict-like object to extract message arguments from.
+        """
+        try:
+            self.__sender = vars["from"]
+            self.__to = vars["to"]
+            self.__body = vars["body"]
+        except KeyError, e:
+            raise InvalidMessageError(e[0])
 
-  @property
-  def sender(self):
-    return self.__sender
+        self.__command = None
+        self.__arg = None
 
-  @property
-  def to(self):
-    return self.__to
-
-  @property
-  def body(self):
-    return self.__body
-
-  def __parse_command(self):
-    if self.__arg != None:
-      return
-
-    body = self.__body
-    if body.startswith('\\'):
-      body = '/' + body[1:]
-
-    self.__arg = ''
-    if body.startswith('/'):
-      parts = body.split(' ', 1)
-      self.__command = parts[0][1:]
-      if len(parts) > 1:
-        self.__arg = parts[1].strip()
-    else:
-      self.__arg = self.__body.strip()
-
-  @property
-  def command(self):
-    self.__parse_command()
-    return self.__command
-
-  @property
-  def arg(self):
-    self.__parse_command()
-    return self.__arg
-
-  def reply(self, body, message_type='chat', raw_xml=False,
+    def reply(self, body, message_type='chat', raw_xml=False,
             send_message=send_message):
-    """Convenience function to reply to a message.
+        """Convenience function to reply to a message.
 
-    Args:
-      body: str: The body of the message
-      message_type, raw_xml: As per send_message.
-      send_message: Used for testing.
+        Args:
+          body: str: The body of the message
+          message_type, raw_xml: As per send_message.
+          send_message: Used for testing.
 
-    Returns:
-      A status code as per send_message.
+        Returns:
+          A status code as per send_message.
 
-    Raises:
-      See send_message.
-    """
-    return send_message([self.sender], body, from_jid=self.to,
+        Raises:
+          See send_message.
+        """
+        return send_message([self.sender], body, from_jid=self.to,
                         message_type=message_type, raw_xml=raw_xml)
 
 
@@ -141,6 +103,20 @@ class TestCommandHandler(unittest.TestCase):
 
         data = {}
         client.open(method='POST', data=data)
+
+        assert fake_local.get('message', None) is None
+
+    @raises(NotImplementedError)
+    def test_not_implemented(self):
+        app = get_app()
+        client = app.get_test_client()
+
+        data = {
+            'from': 'me@myself.com',
+            'to':   'you@yourself.com',
+            'body': '/inexistent_command foo bar',
+        }
+        client.open(method='POST', path='/test2', data=data)
 
         assert fake_local.get('message', None) is None
 
@@ -179,4 +155,15 @@ class TestCommandHandler(unittest.TestCase):
 
         assert fake_local.get('message', None) == {'body': 'Bar command!'}
 
+    def test_text_message(self):
+        app = get_app()
+        client = app.get_test_client()
 
+        data = {
+            'from': 'me@myself.com',
+            'to':   'you@yourself.com',
+            'body': 'Hello, text message!',
+        }
+        client.open(method='POST', data=data)
+
+        assert fake_local.get('message', None) == {'body': 'Hello, text message!'}
